Updated 5 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
       <h2 class="editable" id="our-story-h2-d" data-cms-source="/_includes/about-hero.html" data-cms-index="0">
         Our Story
       </h2>
-      <img class="img-fluid about-img-1-img editable" src="/assets/img/AboutImage1.png?_cchid=0db13a37b32e9f799b7f923e7cf0a2a2" alt="friendly face" data-cms-source="/_includes/about-hero.html" data-cms-index="1" data-cms-original-src="/assets/img/AboutImage1.png" />
+      <img class="img-fluid about-img-1-img editable" alt="friendly face" src="/uploads/img-3588.jpg?_cchid=5c283841e06431b2bd2407883b0cdba2" width="366" srcset="/uploads/img-3588.jpg?_cchid=5c283841e06431b2bd2407883b0cdba2 366w, /uploads/img-3588@2x.jpg?_cchid=70c74ccf864b35546d79f03ace137a71 732w" data-cms-source="/_includes/about-hero.html" data-cms-index="1" data-cms-original-src="/uploads/img-3588.jpg" data-cms-original-srcset="/uploads/img-3588.jpg 366w, /uploads/img-3588@2x.jpg 732w" />
       <div class="about-hero-text">
         <h2 class="editable" data-cms-source="/_includes/about-hero.html" data-cms-index="2">
           We're on a mission to bring goodness to our community
@@ -211,7 +211,7 @@
       <h2 class="editable" id="our-story-h2-m" data-cms-source="/_includes/about-hero.html" data-cms-index="6">
         Our Story
       </h2>
-      <img class="img-fluid editable" src="/assets/img/AboutImage3.png?_cchid=b93b70fa38a8d7f87029de4fe4f36e5a" alt="friendly face" data-cms-source="/_includes/about-hero.html" data-cms-index="7" data-cms-original-src="/assets/img/AboutImage3.png" />
+      <img class="img-fluid editable" alt="friendly face" src="/uploads/img-3566.jpg?_cchid=3c23eb39bf7c36fda6b178a031d6b41f" width="367" srcset="/uploads/img-3566.jpg?_cchid=3c23eb39bf7c36fda6b178a031d6b41f 367w, /uploads/img-3566@2x.jpg?_cchid=ca95ea395ea5abb7c9596e9c00d8fb10 734w" data-cms-source="/_includes/about-hero.html" data-cms-index="7" data-cms-original-src="/uploads/img-3566.jpg" data-cms-original-srcset="/uploads/img-3566.jpg 367w, /uploads/img-3566@2x.jpg 734w" />
     </div>
   </div>
 </div>
