Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -324,6 +324,12 @@
         </a>
       </div>
     
+      <div class="d-inline-block">
+        <a href="" class="item cc-active" target="_blank">
+          <img class="img-large ig-img img-fluid" src="/uploads/img-3280.jpeg?_cchid=1a01fea435f67ed42ef1c08d1e372569" alt="Mr G Farmer" data-cms-original-src="/uploads/img-3280.jpeg" />
+        </a>
+      </div>
+    
 
   </div>
 </div>
