Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -229,10 +229,10 @@
   </div>
 
   <div class="lyndale-page-hist editable" data-cms-source="/lyndale-market.html" data-cms-index="9">
-    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid" alt="History" width="721" srcset="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4 721w, /uploads/img-2743@2x.jpg?_cchid=724c7a91a1ab7ec82ea3db1c9c9a5b31 1442w" src="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4" data-cms-original-src="/uploads/img-2743.jpg" data-cms-original-srcset="/uploads/img-2743.jpg 721w, /uploads/img-2743@2x.jpg 1442w" /></div>
+    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid" alt="History" width="1536" srcset="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4 721w, /uploads/img-2743@2x.jpg?_cchid=724c7a91a1ab7ec82ea3db1c9c9a5b31 1442w" src="/uploads/img-3567.jpeg?_cchid=99f207fc83a4299c0b5327c66f5c2306" height="2048" data-cms-original-src="/uploads/img-3567.jpeg" data-cms-original-srcset="/uploads/img-2743.jpg 721w, /uploads/img-2743@2x.jpg 1442w" /></div>
     <div class="col-12 col-lg-5 lyndale-hist-text">
-      <h3>Everyone should have access to fresh, healthy, local food.</h3>
-      <p>TAKE ACTION TO PRESERVE FUNDING FOR MARKET BUCKS -<br />Please contact your lawmaker today to urge them to adopt the House language that includes funding for Market Bucks and and tell them we&rsquo;re counting on them to make sure this program continues to have a positive impact on Minnesotans for years to come.&nbsp;</p><a id="lyn-hist-button" class="btn btn-lg theme-button" role="button" target="_blank" rel="noopener" href="https://www.hungersolutions.org/">Learn more</a>
+      <h3>What's in-season</h3>
+      <p>TAKE ACTION TO PRESERVE FUNDING FOR MARKET BUCKS -<br />Please contact your lawmaker today to urge them to adopt the House language that includes funding for Market Bucks and and tell them we&rsquo;re counting on them to make sure this program continues to have a positive impact on Minnesotans for years to come.&nbsp;</p><a id="lyn-hist-button" class="btn btn-lg theme-button" role="button" target="_blank" rel="noopener" href="https://minnesotagrown.com/whats-in-season/">Learn more</a>
     </div>
   </div>
   <div class="faq-bg-wrapper">
