Updated 2 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
       <h2 class="editable" id="our-story-h2-m" data-cms-source="/_includes/about-hero.html" data-cms-index="6">
         Our Story
       </h2>
-      <img class="img-fluid editable" alt="friendly face" src="/uploads/img-3566.jpg?_cchid=3c23eb39bf7c36fda6b178a031d6b41f" width="367" srcset="/uploads/img-3566.jpg?_cchid=3c23eb39bf7c36fda6b178a031d6b41f 367w, /uploads/img-3566@2x.jpg?_cchid=ca95ea395ea5abb7c9596e9c00d8fb10 734w" data-cms-source="/_includes/about-hero.html" data-cms-index="7" data-cms-original-src="/uploads/img-3566.jpg" data-cms-original-srcset="/uploads/img-3566.jpg 367w, /uploads/img-3566@2x.jpg 734w" />
+      <img class="img-fluid editable" alt="friendly face" width="367" src="/uploads/img-3513-1.jpg?_cchid=b07d80f7ba020a78e07aec87b30803dd" data-cms-source="/_includes/about-hero.html" data-cms-index="7" data-cms-original-src="/uploads/img-3513-1.jpg" />
     </div>
   </div>
 </div>
