Updated 10 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta name="twitter:site" content="@MplsFarmMarket" />
 <meta property="article:publisher" content="https://www.facebook.com/MplsFarmersMarket/" />
 <script type="application/ld+json">
-{"url":"https://www.mplsfarmersmarket.com/","headline":"Home","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"name":"Minneapolis Farmers Market","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@type":"WebSite","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"@context":"https://schema.org"}</script>
+{"url":"https://www.mplsfarmersmarket.com/","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"name":"Minneapolis Farmers Market","@type":"WebSite","headline":"Home","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -123,11 +123,11 @@
   <body>
     <nav class="navbar navbar-light bg-transparent">
   <div class="logo">
-    <a class="bg-transparent cc-active" href="/"><img src="/assets/img/Minneapolis-Farmers-Market-Logo.svg?_cchid=1f7c19cc518e97decc58356b84857b2c" alt="Minneapolis Farmers Market logo" data-cms-original-src="assets/img/Minneapolis-Farmers-Market-Logo.svg" /></a>
+    <a class="bg-transparent" href="/"><img src="/assets/img/Minneapolis-Farmers-Market-Logo.svg?_cchid=1f7c19cc518e97decc58356b84857b2c" alt="Minneapolis Farmers Market logo" data-cms-original-src="assets/img/Minneapolis-Farmers-Market-Logo.svg" /></a>
   </div>
 
   <div class="topnav" id="myTopNav">
-    <a class="topnav-trigger cc-active" href="#">Markets <i class="arrow down"></i></a>
+    <a class="topnav-trigger" href="#">Markets <i class="arrow down"></i></a>
     <a href="/vendors">Vendors</a>
     <a href="/about">About</a>
     <a href="/contact">Contact</a>
@@ -156,8 +156,8 @@
     <!-- MOBILE DROPDOWN MENU OVERLAY -->
     <div class="overlay-mobile hide">
       <div class="overlay-mobile-content">
-        <a href="/" class="cc-active">Home</a>
-        <a class="dropdown-mobile cc-active" href="#">Markets <i class="fas fa-chevron-right"></i></a>
+        <a href="/">Home</a>
+        <a class="dropdown-mobile" href="#">Markets <i class="fas fa-chevron-right"></i></a>
         <a href="/vendors">Vendors</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
@@ -174,7 +174,7 @@
       <!-- MOBILE DROPDOWN MENU OVERLAY 2 -->
     <div class="overlay-mobile-2 hide" id="myNav">
       <div class="overlay-mobile-2-content">
-        <a class="back-icon cc-active" href="#"><i class="fas fa-chevron-left"></i></a>
+        <a class="back-icon" href="#"><i class="fas fa-chevron-left"></i></a>
         <a href="/lyndale-market">Minneapolis Farmers Market</a>
         <a href="/nicollet-market">Nicollet Mall Market</a>
         <a href="/ebt-guidelines">EBT / SNAP / FMNP</a>
@@ -258,7 +258,7 @@
 
     
       <div class="d-inline-block">
-        <a href="" class="item cc-active" target="_blank">
+        <a href="" class="item" target="_blank">
           <img class="img-large ig-img img-fluid" src="/uploads/img-3280.jpeg?_cchid=1a01fea435f67ed42ef1c08d1e372569" alt="Mr G Farmer" data-cms-original-src="/uploads/img-3280.jpeg" />
         </a>
       </div>
@@ -360,7 +360,7 @@
     <div class="container-fluid">
   <div class="footer">
     <div class="row logo-wrapper justify-content-center">
-      <a href="/" class="cc-active"><img src="/assets/img/Minneapolis-Farmers-Market-Footer-Logo.svg?_cchid=4b63011977a0ca1d3e55ae397e198350" class="footer-logo" alt="Minneapolis Farmers Market logo" data-cms-original-src="assets/img/Minneapolis-Farmers-Market-Footer-Logo.svg" /></a>
+      <a href="/"><img src="/assets/img/Minneapolis-Farmers-Market-Footer-Logo.svg?_cchid=4b63011977a0ca1d3e55ae397e198350" class="footer-logo" alt="Minneapolis Farmers Market logo" data-cms-original-src="assets/img/Minneapolis-Farmers-Market-Footer-Logo.svg" /></a>
     </div>
     <div class="menu-wrapper">
       <ul id="footer-menu">
