Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -329,6 +329,12 @@
         </a>
       </div>
     
+      <div class="d-inline-block">
+        <a href="" class="item" target="_blank">
+          <img class="img-large ig-img img-fluid" src="/uploads/img-4138.JPEG?_cchid=0011d73ccb72aa4fc0696e1f8e23e292" alt="Peppers" data-cms-original-src="/uploads/img-4138.JPEG" />
+        </a>
+      </div>
+    
 
   </div>
 </div>
