Updated 10 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
     <a href="/vendors">Vendors</a>
     <a href="/about">About</a>
     <a href="/contact">Contact</a>
-    <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+    <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="0">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
   </div>
 
   <!-- DROPDOWN MENU OVERLAY -->
@@ -168,7 +168,7 @@
         </div>
       </div>
 
-      <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="mobile-nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+      <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable mobile-nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="1">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
     </div>
 
       <!-- MOBILE DROPDOWN MENU OVERLAY 2 -->
@@ -180,7 +180,7 @@
         <a href="/ebt-guidelines">EBT / SNAP / FMNP</a>
         <a href="/market-rules">Market Rules</a>
       </div>
-      <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="mobile-nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+      <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable mobile-nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="2">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
     </div>
   </div>
 </nav>
@@ -254,7 +254,7 @@
     </div>
     <div class="friends-text col-12 col-lg-7 editable" data-cms-source="/about.html" data-cms-index="2">
       <p>The Minneapolis Market is a community resource, meeting place, tourist draw&mdash;and perhaps most, important&mdash;a place to get the greatest selection of fresh and local plants and produce with more than two hundred growers on the weekend, it is the largest Farmer/Producer managed market in the state.<br /><br />The Minneapolis Farmers Market connects growers to gardeners and eaters and that connection is what makes it so unique compared to the average shopping experiences. It&rsquo;s a place where you can experience your food, hear about where it came from, how it was treated, and even get ideas on how to prepare it&mdash;directly from the grower.<br /><br />Make a gift today or buy some Market swag and help keep the Market thriving!</p>
-      <p><a class="btn btn-lg theme-button" role="button" href="#">Make a gift</a></p>
+      <p><a class="editable btn btn-lg theme-button" role="button" href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" target="_blank" data-cms-source="/about.html" data-cms-index="3">Make a gift</a></p>
     </div>
   </div>
   <div class="newsletter-optin">
