--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
     <a href="/vendors">Vendors</a>
     <a href="/about">About</a>
     <a href="/contact">Contact</a>
-    <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+    <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="0">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
   </div>
 
   <!-- DROPDOWN MENU OVERLAY -->
@@ -168,7 +168,7 @@
         </div>
       </div>
 
-      <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="mobile-nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+      <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable mobile-nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="1">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
     </div>
 
       <!-- MOBILE DROPDOWN MENU OVERLAY 2 -->
@@ -180,7 +180,7 @@
         <a href="/ebt-guidelines">EBT / SNAP / FMNP</a>
         <a href="/market-rules">Market Rules</a>
       </div>
-      <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="mobile-nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+      <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable mobile-nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="2">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
     </div>
   </div>
 </nav>
