--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -131,7 +131,7 @@
     <a href="/vendors">Vendors</a>
     <a href="/about">About</a>
     <a href="/contact">Contact</a>
-    <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+    <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="0">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
   </div>
 
   <!-- DROPDOWN MENU OVERLAY -->
@@ -168,7 +168,7 @@
         </div>
       </div>
 
-      <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="mobile-nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+      <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable mobile-nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="1">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
     </div>
 
       <!-- MOBILE DROPDOWN MENU OVERLAY 2 -->
@@ -180,7 +180,7 @@
         <a href="/ebt-guidelines">EBT / SNAP / FMNP</a>
         <a href="/market-rules">Market Rules</a>
       </div>
-      <a href="https://friends-of-the-mpls-farmers-market.square.site/" class="mobile-nav-gift">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
+      <a href="https://checkout.square.site/buy/5VQMMP23DNVDYAHIV4M5S7ZK" class="editable mobile-nav-gift" data-cms-source="/_includes/navigation.html" data-cms-index="2">Make a Gift<img src="/assets/img/NewTabIcon.svg?_cchid=d193343c9e43bf5dbbcd736865fc6a51" alt="New Tab Icon" data-cms-original-src="/assets/img/NewTabIcon.svg" /></a>
     </div>
   </div>
 </nav>
@@ -229,7 +229,7 @@
   </div>
 
   <div class="lyndale-page-hist editable" data-cms-source="/lyndale-market.html" data-cms-index="9">
-    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid" alt="History" width="1536" srcset="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4 721w, /uploads/img-2743@2x.jpg?_cchid=724c7a91a1ab7ec82ea3db1c9c9a5b31 1442w" src="/uploads/img-3567-1.jpeg?_cchid=99f207fc83a4299c0b5327c66f5c2306" height="2048" data-cms-original-src="/uploads/img-3567-1.jpeg" data-cms-original-srcset="/uploads/img-2743.jpg 721w, /uploads/img-2743@2x.jpg 1442w" /></div>
+    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid editable" alt="History" width="721" srcset="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4 721w, /uploads/img-2743@2x.jpg?_cchid=724c7a91a1ab7ec82ea3db1c9c9a5b31 1442w" src="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4" data-cms-source="/lyndale-market.html" data-cms-index="10" data-cms-original-src="/uploads/img-2743.jpg" data-cms-original-srcset="/uploads/img-2743.jpg 721w, /uploads/img-2743@2x.jpg 1442w" /></div>
     <div class="col-12 col-lg-5 lyndale-hist-text">
       <h3>What's in-season</h3>
       <p>Raspberries, Strawberries, Baby Red Potatoes, Pickling Cucumbers &amp; Dill, Chives, Asparagus, Spinach, Watercress, Radishes, Basil, Rhubarb, Baby Lettuce, Cilantro, Mushrooms, Zucchini, Microgreens, Bean Sprouts, Eggs, fresh &amp; smoked Trout, Meat, Cheese, Maple Syrup, and more!</p><a id="lyn-hist-button" class="btn btn-lg theme-button" role="button" target="_blank" rel="noopener" href="https://minnesotagrown.com/whats-in-season/">Learn more</a>
