Updated 11 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <title>Home - Minneapolis Farmers Market</title>
-    <link rel="stylesheet" href="/assets/css/main.css?_cchid=42efdaafa80d310025d7fa65527b2f42" data-cms-original-href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css?_cchid=354a3210bb8bc82516445f69c90f4c56" data-cms-original-href="/assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico?_cchid=86619d0912985ed9ceace094e56b1a2d" data-cms-original-href="/assets/img/favicon.ico" />
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/default.js"></script> -->
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/mailchimp.js"></script> -->
@@ -32,7 +32,7 @@
 <meta name="twitter:site" content="@MplsFarmMarket" />
 <meta property="article:publisher" content="https://www.facebook.com/MplsFarmersMarket/" />
 <script type="application/ld+json">
-{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","name":"Minneapolis Farmers Market","headline":"Home","@type":"WebSite","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","headline":"Home","name":"Minneapolis Farmers Market","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -184,6 +184,7 @@
     </div>
   </div>
 </nav>
+
     <div class="container-fluid">
   <div class="hero-section">
   <div class="col-12 col-lg-6 home-hero-text">
@@ -213,6 +214,7 @@
       <h5>Nicollet Mall Market</h5>
       <p><strong>Now Open Every Thursday</strong></p>
       <p class="market-hours">6am to 2pm | Rain or Shine<br />EBT Hours 8am to 1pm</p>
+      <p class="market-hours">*Closed Today due to rain forecast 08/26/21*</p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br />between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/nicollet-market">Learn More</a></p>
     </div>
