--- a/nicollet-market.html
+++ b/nicollet-market.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <title>Nicollet Market - Minneapolis Farmers Market</title>
-    <link rel="stylesheet" href="/assets/css/main.css?_cchid=42efdaafa80d310025d7fa65527b2f42" data-cms-original-href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css?_cchid=354a3210bb8bc82516445f69c90f4c56" data-cms-original-href="/assets/css/main.css" />
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico?_cchid=86619d0912985ed9ceace094e56b1a2d" data-cms-original-href="/assets/img/favicon.ico" />
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/default.js"></script> -->
     <!-- <script src="https://www.mplsfarmersmarket.com/assets/js/mailchimp.js"></script> -->
@@ -32,7 +32,7 @@
 <meta name="twitter:site" content="@MplsFarmMarket" />
 <meta property="article:publisher" content="https://www.facebook.com/MplsFarmersMarket/" />
 <script type="application/ld+json">
-{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/nicollet-market.html","headline":"Nicollet Market","@type":"WebPage","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/nicollet-market.html","headline":"Nicollet Market","@type":"WebPage","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -184,6 +184,7 @@
     </div>
   </div>
 </nav>
+
     <div class="container-fluid market-page">
   <div class="market-page-hero">
     <div class="col-12 col-lg-6 market-page-hero-text">
