--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta name="twitter:site" content="@MplsFarmMarket" />
 <meta property="article:publisher" content="https://www.facebook.com/MplsFarmersMarket/" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","headline":"Home","name":"Minneapolis Farmers Market","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
+{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","headline":"Home","name":"Minneapolis Farmers Market","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -207,6 +207,7 @@
       <h5>Minneapolis Farmers Market</h5>
       <p><strong>Now Open Daily - No Dogs Allowed</strong></p>
       <p class="market-hours">Daily from 6am - 1pm | Rain or Shine<br />EBT Hours: Thurs. - Sun. from 8am - 1pm</p>
+      <p class="market-hours">09/02/21 - EBT is CLOSED TODAY</p>
       <p class="market-address">312 East Lyndale Ave North,<br />Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/lyndale-market">Learn More</a></p>
     </div>
@@ -214,7 +215,6 @@
       <h5>Nicollet Mall Market</h5>
       <p><strong>Now Open Every Thursday</strong></p>
       <p class="market-hours">6am to 2pm | Rain or Shine<br />EBT Hours 8am to 1pm</p>
-      <p class="market-hours">*Closed Today due to rain forecast 08/26/21*</p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br />between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/nicollet-market">Learn More</a></p>
     </div>
