Updated 3 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -230,7 +230,7 @@
   </div>
 
   <div class="lyndale-page-hist editable" data-cms-source="/lyndale-market.html" data-cms-index="9">
-    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid editable" alt="History" width="721" srcset="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4 721w, /uploads/img-2743@2x.jpg?_cchid=724c7a91a1ab7ec82ea3db1c9c9a5b31 1442w" src="/uploads/img-2743.jpg?_cchid=c79b0eb70c29183da7b6dcdd7724c5b4" data-cms-source="/lyndale-market.html" data-cms-index="10" data-cms-original-src="/uploads/img-2743.jpg" data-cms-original-srcset="/uploads/img-2743.jpg 721w, /uploads/img-2743@2x.jpg 1442w" /></div>
+    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid editable" alt="History" width="721" src="/6ecc7718-0277-45d8-94ec-2ddc37cf0e16.jpg?_cchid=67115a01af57beebb4f61fd696c84686" data-cms-source="/lyndale-market.html" data-cms-index="10" data-cms-original-src="/6ecc7718-0277-45d8-94ec-2ddc37cf0e16.jpg" /></div>
     <div class="col-12 col-lg-5 lyndale-hist-text">
       <h3>What's in-season</h3>
       <p>Raspberries, Strawberries, Baby Red Potatoes, Pickling Cucumbers &amp; Dill, Chives, Asparagus, Spinach, Watercress, Radishes, Basil, Rhubarb, Baby Lettuce, Cilantro, Mushrooms, Zucchini, Microgreens, Bean Sprouts, Eggs, fresh &amp; smoked Trout, Meat, Cheese, Maple Syrup, and more!</p><a id="lyn-hist-button" class="btn btn-lg theme-button" role="button" target="_blank" rel="noopener" href="https://minnesotagrown.com/whats-in-season/">Learn more</a>
@@ -259,7 +259,7 @@
               How do I get to the Market?
             </p>
             <p class="editable" data-cms-source="/_includes/l-faqs.html" data-cms-index="2">
-              Click <a href="https://www.google.com/maps/place/Minneapolis+Farmers+Market/@44.9812546,-93.2879682,17z/data=!3m1!4b1!4m5!3m4!1s0x52b332f2001c4bc3:0xfaed36a62b847c8d!8m2!3d44.9813193!4d-93.2857759">here</a> for Google Maps directions. Our address is, 312 East Lyndale Ave North, Minneapolis MN 55405. Consider taking public transportation to find a route that works for you, please visit the metro transit trip planner website by <a href="http://www.metrotransit.org/">clicking here</a>.
+              Click <a href="https://www.google.com/maps/place/Minneapolis+Farmers+Market/@44.9812546,-93.2879682,17z/data=!3m1!4b1!4m5!3m4!1s0x52b332f2001c4bc3:0xfaed36a62b847c8d!8m2!3d44.9813193!4d-93.2857759">here</a> for Google Maps directions. Our address is, 312 East Lyndale Ave North, Minneapolis MN 55405. Consider taking public transportation to find a route that works for you, please visit the metro transit trip planner website by <a href="https://www.metrotransit.org/">clicking here</a>.
             </p>
             <p class="faq-bold editable" data-cms-source="/_includes/l-faqs.html" data-cms-index="3">
               When is the<span class="wonky-spacing"> </span>&ldquo;best&rdquo;<span class="wonky-spacing"> </span>time to visit the Lyndale Market?
