--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <meta name="twitter:site" content="@MplsFarmMarket" />
 <meta property="article:publisher" content="https://www.facebook.com/MplsFarmersMarket/" />
 <script type="application/ld+json">
-{"image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"url":"https://www.mplsfarmersmarket.com/","headline":"Home","name":"Minneapolis Farmers Market","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://www.mplsfarmersmarket.com/assets/img/Minneapolis-Farmers-Market-Logo.svg"}},"headline":"Home","name":"Minneapolis Farmers Market","sameAs":["https://twitter.com/MplsFarmMarket","https://www.facebook.com/MplsFarmersMarket","https://www.instagram.com/mplsfarmmarket"],"@type":"WebSite","url":"https://www.mplsfarmersmarket.com/","image":"https://www.mplsfarmersmarket.com/assets/img/mplsfarmersmarket-social.png","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script type="application/ld+json">
@@ -212,7 +212,7 @@
     </div>
     <div class="col-12 col-lg-6 home-market-info home-market-2 editable" data-cms-source="/_includes/home-market-info.html" data-cms-index="1">
       <h5>Nicollet Mall Market</h5>
-      <p><strong>Now Open Every Thursday</strong></p>
+      <p><strong>Closed for the 2021 Season</strong></p>
       <p class="market-hours">6am to 2pm | Rain or Shine<br />EBT Hours 8am to 1pm</p>
       <p class="market-address">Nicollet Mall, in Downtown Minneapolis<br />between 6th and 9th streets</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/nicollet-market">Learn More</a></p>
