Updated 3 files via CloudCannon

--- a/nicollet-market.html
+++ b/nicollet-market.html
@@ -193,7 +193,7 @@
           Nicollet Mall Market
         </h2>
         <h5 class="editable" data-cms-source="/nicollet-market.html" data-cms-index="1">
-          <strong>Now Open Every Thursday</strong>
+          <strong>Closed for the 2021 Season</strong>
         </h5>
         <p class="market-page-hours editable" data-cms-source="/nicollet-market.html" data-cms-index="2">
           6 am to 2pm | Rain or Shine<br />EBT Hours 8 am to 1 pm
@@ -265,7 +265,7 @@
               How do I get to the Market?
             </p>
             <p class="editable" data-cms-source="/_includes/n-faqs.html" data-cms-index="2">
-              Click <a href="https://www.google.com/maps/place/Downtown+Farmers'+Market/@44.9530226,-93.3113993,13z/data=!4m9!1m2!2m1!1sminneapolis+nicollet+farmers+market!3m5!1s0x52b3329949383b49:0xd522367a265462ab!8m2!3d44.9758034!4d-93.2666205!15sCiNtaW5uZWFwb2xpcyBuaWNvbGxldCBmYXJtZXJzIG1hcmtldFo-ChduaWNvbGxldCBmYXJtZXJzIG1hcmtldCIjbWlubmVhcG9saXMgbmljb2xsZXQgZmFybWVycyBtYXJrZXSSAQ5mYXJtZXJzX21hcmtldA">here</a> for Google Maps directions. Our vendors are set up between 6th and 9th Street on the Nicollet Mall. Consider taking public transportation to find a route that works for you, please visit the metro transit trip planner website by <a href="http://www.metrotransit.org/">clicking here</a>.
+              Click <a href="https://www.google.com/maps/place/Downtown+Farmers'+Market/@44.9530226,-93.3113993,13z/data=!4m9!1m2!2m1!1sminneapolis+nicollet+farmers+market!3m5!1s0x52b3329949383b49:0xd522367a265462ab!8m2!3d44.9758034!4d-93.2666205!15sCiNtaW5uZWFwb2xpcyBuaWNvbGxldCBmYXJtZXJzIG1hcmtldFo-ChduaWNvbGxldCBmYXJtZXJzIG1hcmtldCIjbWlubmVhcG9saXMgbmljb2xsZXQgZmFybWVycyBtYXJrZXSSAQ5mYXJtZXJzX21hcmtldA">here</a> for Google Maps directions. Our vendors are set up between 6th and 9th Street on the Nicollet Mall. Consider taking public transportation to find a route that works for you, please visit the metro transit trip planner website by <a href="https://www.metrotransit.org/">clicking here</a>.
             </p>
             <p class="faq-bold editable" data-cms-source="/_includes/n-faqs.html" data-cms-index="3">
               When is the Nicollet Mall Market open?
