--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -193,7 +193,7 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-source="/lyndale-market.html" data-cms-index="1">
-        <strong>Now Open Daily</strong>
+        <strong>Now Open Daily until Oct. 31st</strong>
       </h5>
       <p class="market-page-hours editable" data-cms-source="/lyndale-market.html" data-cms-index="2">
         6 am to 1 pm | Rain or Shine<br />EBT Hours: Thurs - Sun from 8am - 1pm
@@ -232,8 +232,12 @@
   <div class="lyndale-page-hist editable" data-cms-source="/lyndale-market.html" data-cms-index="9">
     <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid editable" alt="History" width="721" src="/6ecc7718-0277-45d8-94ec-2ddc37cf0e16.jpg?_cchid=67115a01af57beebb4f61fd696c84686" data-cms-source="/lyndale-market.html" data-cms-index="10" data-cms-original-src="/6ecc7718-0277-45d8-94ec-2ddc37cf0e16.jpg" /></div>
     <div class="col-12 col-lg-5 lyndale-hist-text">
-      <h3 class="editable" data-cms-source="/lyndale-market.html" data-cms-index="11">What's in-season</h3>
-      <p class="editable" data-cms-source="/lyndale-market.html" data-cms-index="12">Raspberries, Strawberries, Baby Red Potatoes, Pickling Cucumbers &amp; Dill, Chives, Asparagus, Spinach, Watercress, Radishes, Basil, Rhubarb, Baby Lettuce, Cilantro, Mushrooms, Zucchini, Microgreens, Bean Sprouts, Eggs, fresh &amp; smoked Trout, Meat, Cheese, Maple Syrup, and more!</p><a id="lyn-hist-button" class="btn btn-lg theme-button editable" role="button" target="_blank" rel="noopener" href="https://minnesotagrown.com/whats-in-season/" data-cms-source="/lyndale-market.html" data-cms-index="13">Learn more</a>
+      <h3 class="editable" data-cms-source="/lyndale-market.html" data-cms-index="11">
+        What's in-season
+      </h3>
+      <p class="editable" data-cms-source="/lyndale-market.html" data-cms-index="12">
+        Raspberries, Strawberries, Baby Red Potatoes, Pickling Cucumbers &amp; Dill, Chives, Asparagus, Spinach, Watercress, Radishes, Basil, Rhubarb, Baby Lettuce, Cilantro, Mushrooms, Zucchini, Microgreens, Bean Sprouts, Eggs, fresh &amp; smoked Trout, Meat, Cheese, Maple Syrup, and more!
+      </p><a id="lyn-hist-button" class="btn btn-lg theme-button editable" role="button" target="_blank" rel="noopener" href="https://minnesotagrown.com/whats-in-season/" data-cms-source="/lyndale-market.html" data-cms-index="13">Learn more</a>
     </div>
   </div>
   <div class="faq-bg-wrapper">
