Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <div class="market-info-wrapper">
     <div id="home-market-one" class="col-12 col-lg-6 home-market-info left-column editable" data-cms-source="/_includes/home-market-info.html" data-cms-index="0">
       <h5>Minneapolis Farmers Market</h5>
-      <p><strong>Now Open Daily - No Dogs Allowed</strong></p>
+      <p><strong>Now Open Daily <strong>until Oct. 31st&nbsp;</strong>- No Dogs Allowed</strong></p>
       <p class="market-hours">Daily from 6am - 1pm | Rain or Shine<br />EBT Hours: Thurs. - Sun. from 8am - 1pm</p>
       <p class="market-address">312 East Lyndale Ave North,<br />Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/lyndale-market">Learn More</a></p>
