Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -193,10 +193,10 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-source="/lyndale-market.html" data-cms-index="1">
-        <strong>Now Open Daily until Oct. 31st</strong>
+        Every Sat. &amp; Sun in December<br /><br />Christmas Tree vendors will start daily one week before Thanksgiving
       </h5>
       <p class="market-page-hours editable" data-cms-source="/lyndale-market.html" data-cms-index="2">
-        6 am to 1 pm | Rain or Shine<br />EBT Hours: Thurs - Sun from 8am - 1pm
+        Select Dates 9AM - NOON | Rain, Snow or ShineEBT Closed for the season
       </p>
       <p class="market-page-address editable" data-cms-source="/lyndale-market.html" data-cms-index="3">
         312 East Lyndale Ave North,<br />Minneapolis, Minnesota 55405
