Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -196,7 +196,7 @@
         Every Sat. &amp; Sun in December<br /><br />Christmas Tree vendors will start daily one week before Thanksgiving
       </h5>
       <p class="market-page-hours editable" data-cms-source="/lyndale-market.html" data-cms-index="2">
-        Select Dates 9AM - NOON | Rain, Snow or ShineEBT Closed for the season
+        Select Dates 9AM - NOON | Rain, Snow or Shine<br /><br />EBT Closed for the season
       </p>
       <p class="market-page-address editable" data-cms-source="/lyndale-market.html" data-cms-index="3">
         312 East Lyndale Ave North,<br />Minneapolis, Minnesota 55405
