Updated 3 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -205,9 +205,7 @@
   <div class="market-info-wrapper">
     <div id="home-market-one" class="col-12 col-lg-6 home-market-info left-column editable" data-cms-source="/_includes/home-market-info.html" data-cms-index="0">
       <h5>Minneapolis Farmers Market</h5>
-      <p>Every Sat. &amp; Sun in December</p>
-      <p>Christmas Tree vendors will start daily one week before Thanksgiving</p>
-      <p class="market-hours">Select Dates 9AM - NOON | Rain, Snow or Shine<br />EBT Closed for the season</p>
+      <p>Select Dates 9AM - NOON | Rain, Snow or Shine<br />EBT Closed for the season</p>
       <p class="market-address">312 East Lyndale Ave North,<br />Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" role="button" href="/lyndale-market">Learn More</a></p>
     </div>
