--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -204,7 +204,7 @@
       </div>
     </div>
     <div class="col-12 col-lg-7 lyn-market-page-hero-img">
-      <img class="img-fluid editable" src="/uploads/wintermarketschedule.jpg?_cchid=570366e0946f8b3f601b95a07065efa3" width="890" srcset="/uploads/wintermarketschedule.jpg?_cchid=570366e0946f8b3f601b95a07065efa3 890w, /uploads/wintermarketschedule@2x.jpg?_cchid=bdc54aff6dbcd97ddc1f9d7d30a7592f 1780w" data-cms-source="/lyndale-market.html" data-cms-index="4" data-cms-original-src="/uploads/wintermarketschedule.jpg" data-cms-original-srcset="/uploads/wintermarketschedule.jpg 890w, /uploads/wintermarketschedule@2x.jpg 1780w" />
+      <img class="img-fluid editable" width="890" src="/uploads/wintermarketschedule-1.jpg?_cchid=d72592430a379cdb52d3aca318e948cc" data-cms-source="/lyndale-market.html" data-cms-index="4" data-cms-original-src="/uploads/wintermarketschedule-1.jpg" />
     </div>
   </div>
   <div class="market-bg-wrapper">
