--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -236,7 +236,7 @@
         What's in-season
       </h3>
       <p class="editable" data-cms-source="/lyndale-market.html" data-cms-index="12">
-        Raspberries, Strawberries, Baby Red Potatoes, Pickling Cucumbers &amp; Dill, Chives, Asparagus, Spinach, Watercress, Radishes, Basil, Rhubarb, Baby Lettuce, Cilantro, Mushrooms, Zucchini, Microgreens, Bean Sprouts, Eggs, fresh &amp; smoked Trout, Meat, Cheese, Maple Syrup, and more!
+        Christmas Tree vendors will be open daily starting one week before Thanksgiving.<br /><br />Eggs, fresh &amp; smoked Trout, Meat, Cheese, Maple Syrup, and more!
       </p><a id="lyn-hist-button" class="btn btn-lg theme-button editable" role="button" target="_blank" rel="noopener" href="https://minnesotagrown.com/whats-in-season/" data-cms-source="/lyndale-market.html" data-cms-index="13">Learn more</a>
     </div>
   </div>
