Updated 3 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -204,7 +204,7 @@
       </div>
     </div>
     <div class="col-12 col-lg-7 lyn-market-page-hero-img">
-      <img class="img-fluid editable" width="890" src="/uploads/wintermarketschedule-1.jpg?_cchid=d72592430a379cdb52d3aca318e948cc" data-cms-source="/lyndale-market.html" data-cms-index="4" data-cms-original-src="/uploads/wintermarketschedule-1.jpg" />
+      <img class="img-fluid editable" width="890" src="/uploads/img-6841-1.jpg?_cchid=fda8d6f00943b2fc5ec641e003de7e25" data-cms-source="/lyndale-market.html" data-cms-index="4" data-cms-original-src="/uploads/img-6841-1.jpg" />
     </div>
   </div>
   <div class="market-bg-wrapper">
