Updated 3 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -230,7 +230,7 @@
   </div>
 
   <div class="lyndale-page-hist editable" data-cms-source="/lyndale-market.html" data-cms-index="9">
-    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid editable" alt="History" width="721" src="/uploads/img-6841.jpg?_cchid=25b48eb40ff3fc015fc7fd1ca8869731" data-cms-source="/lyndale-market.html" data-cms-index="10" data-cms-original-src="/uploads/img-6841.jpg" /></div>
+    <div class="col-12 col-lg-6 lyndale-hist-img"><img class="img-fluid editable" alt="History" width="721" src="/uploads/wintermarketschedule-3.jpg?_cchid=2fa06b3a4112089b03a5325c97e7638a" data-cms-source="/lyndale-market.html" data-cms-index="10" data-cms-original-src="/uploads/wintermarketschedule-3.jpg" /></div>
     <div class="col-12 col-lg-5 lyndale-hist-text">
       <h3 class="editable" data-cms-source="/lyndale-market.html" data-cms-index="11">
         What's in-season
