Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -275,7 +275,7 @@
               Is the Lyndale Market open even if it&rsquo;s raining?
             </p>
             <p class="editable" data-cms-source="/_includes/l-faqs.html" data-cms-index="6">
-              Of course! We&rsquo;re open seven days a week, rain or shine. But don&rsquo;t worry &ndash; you won&rsquo;t get wet under our famous red sheds.
+              Of course! We&rsquo;re open seven days a week, rain or shine May - Oct. We are open select dates during the winter. But don&rsquo;t worry &ndash; you won&rsquo;t get wet under our famous red sheds.
             </p>
             <p class="faq-bold editable" data-cms-source="/_includes/l-faqs.html" data-cms-index="7">
               Are all six sheds part of the Minneapolis Farmers Market?
