Updated 2 files via CloudCannon

--- a/lyndale-market.html
+++ b/lyndale-market.html
@@ -193,10 +193,10 @@
         MPLS Farmers Market
       </h2>
       <h5 class="editable" data-cms-source="/lyndale-market.html" data-cms-index="1">
-        
+        <strong>Winter HOURS</strong>
       </h5>
       <p class="market-page-hours editable" data-cms-source="/lyndale-market.html" data-cms-index="2">
-        Select Dates 9AM - NOON | Rain, Snow or Shine<br /><br />EBT Closed for the season
+        Select Dates 9AM - NOON | Rain, Snow or Shine<br />X-mas tree vendors starting daily 1 week before Thanksgiving<br />EBT Closed for the season
       </p>
       <p class="market-page-address editable" data-cms-source="/lyndale-market.html" data-cms-index="3">
         312 East Lyndale Ave North,<br />Minneapolis, Minnesota 55405
