Updated 31 files via CloudCannon

--- a/FreshNews/contact-us.html
+++ b/FreshNews/contact-us.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <meta charset="utf-8" />
-  <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://www.mplsfarmersmarket.com/contact.html" />
+<!DOCTYPE html><html lang="en-US"><head><meta charset="utf-8">
+  <title>Redirecting…</title>
+  <link href="https://www.mplsfarmersmarket.com/contact.html" rel="canonical">
   <script>location="https://www.mplsfarmersmarket.com/contact.html"</script>
-  <meta http-equiv="refresh" content="0; url=https://www.mplsfarmersmarket.com/contact.html" />
-  <meta name="robots" content="noindex" />
-  <h1>Redirecting&hellip;</h1>
+  <meta content="0; url=https://www.mplsfarmersmarket.com/contact.html" http-equiv="refresh">
+  <meta content="noindex" name="robots">
+  </head><body><h1>Redirecting…</h1>
   <a href="https://www.mplsfarmersmarket.com/contact.html">Click here if you are not redirected.</a>
-</html>
+
+</body></html>
