Updated 2 files via CloudCannon

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
       <p>February 5th &amp; 19th</p>
       <p>March 5th &amp; 19th</p>
       <p>April 2nd &amp; 3rd, 9th &amp; 10th, 16th, 23rd &amp; 24th</p>
+      <p>Christmas Tree Vendors are OPEN DAILY 7AM -9PM!</p>
       <p class="market-address">312 East Lyndale Ave North,<br>Minneapolis, Minnesota 55405</p>
       <p><a class="btn btn-lg theme-button" href="/lyndale-market" role="button">Learn More</a></p>
     </div>
