Updated 2 files via CloudCannon

--- a/market-rules.html
+++ b/market-rules.html
@@ -200,7 +200,7 @@
           2022 CMVGA Rules of Operation
         </h3>
         <p class="ebt-text editable" data-cms-index="5" data-cms-source="/market-rules.html">
-          <a href="/CentralMinnesotaVegetableGrowersAssociation.svg">Document Link</a>
+          <a data-cms-original-href="/2022-CMVGA-Rules-of-Operation.pdf" href="/2022-CMVGA-Rules-of-Operation.pdf?_cchid=bb316af91322f1604467c6dbc0143c19">Document Link</a>
         </p>
         <h3 class="ebt-text editable" data-cms-index="6" data-cms-source="/market-rules.html">
           Dogs
